// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`YooFormInputContainerComponent Snapshots Should have all attributes 1`] = `
<yoo-form-input-container
  <=""
  class="hydrated"
  data-yoo-form-input-container-host=""
  description="i am description"
  hint="i am hint"
  label="i am label"
  yoo-form-input-container=""
>
  
  <div
    class="description"
    data-yoo-form-input-container=""
  >
    i am description
     
  </div>
  <div
    class="label"
    data-yoo-form-input-container=""
  >
    <span
      data-yoo-form-input-container=""
    >
      i am label
    </span>
    
  </div>
  <div
    class="content-container"
    data-yoo-form-input-container=""
    data-yoo-form-input-container-slot=""
  >
    
  </div>
  <div
    class="hint"
    data-yoo-form-input-container=""
  >
    i am hint
  </div>
</yoo-form-input-container>
`;

exports[`YooFormInputContainerComponent Snapshots Should have all attributes and slot content 1`] = `
<yoo-form-input-container
  <div=""
  class="hydrated"
  data-yoo-form-input-container-host=""
  description="i am description"
  hint="i am hint"
  label="i am label"
>
  
  
  
  
  <div
    class="description"
    data-yoo-form-input-container=""
  >
    i am description
     
  </div>
  <div
    class="label"
    data-yoo-form-input-container=""
  >
    <span
      data-yoo-form-input-container=""
    >
      i am label
    </span>
    
  </div>
  <div
    class="content-container"
    data-yoo-form-input-container=""
    data-yoo-form-input-container-slot=""
  >
    
     
    <yoo-form-checkbox
      class="accent"
      text="this is a checkbox"
    />
      
  </div>
  <div
    class="hint"
    data-yoo-form-input-container=""
  >
    i am hint
  </div>
</yoo-form-input-container>
`;

exports[`YooFormInputContainerComponent Snapshots Should have description content 1`] = `
<yoo-form-input-container
  class="hydrated"
  data-yoo-form-input-container-host=""
  description="i am description"
>
  
  <div
    class="description"
    data-yoo-form-input-container=""
  >
    i am description
     
  </div>
  
  <div
    class="content-container"
    data-yoo-form-input-container=""
    data-yoo-form-input-container-slot=""
  >
    
    
    
  </div>
  
</yoo-form-input-container>
`;

exports[`YooFormInputContainerComponent Snapshots Should have hint content 1`] = `
<yoo-form-input-container
  class="hydrated"
  data-yoo-form-input-container-host=""
  hint="i am hint"
>
  
  
  <div
    class="content-container"
    data-yoo-form-input-container=""
    data-yoo-form-input-container-slot=""
  >
    
    
  </div>
  <div
    class="hint"
    data-yoo-form-input-container=""
  >
    i am hint
  </div>
</yoo-form-input-container>
`;

exports[`YooFormInputContainerComponent Snapshots Should have label content 1`] = `
<yoo-form-input-container
  class="hydrated"
  data-yoo-form-input-container-host=""
  label="i am label"
>
  
  
  <div
    class="label"
    data-yoo-form-input-container=""
  >
    <span
      data-yoo-form-input-container=""
    >
      i am label
    </span>
    
  </div>
  <div
    class="content-container"
    data-yoo-form-input-container=""
    data-yoo-form-input-container-slot=""
  >
    
    
    
  </div>
  
</yoo-form-input-container>
`;
